# portfolio-v2

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py  portfolio_guard.py  question_events.py  rag.py  schemas.py
backend/knowledge/: 00_identity_and_positioning.md  01_current_focus_and_goals.md  02_work_experience_overview.md  03_mochi_health.md  04_pulley_experience.md  05_zoho_experience.md  06_project_stories.md  07_skills_and_technical_profile.md  08_product_engineering_style.md  09_startup_fit.md  10_leadership_and_collaboration.md  11_education_and_academic_background.md  12_public_presence_and_links.md  13_ask_ankit_rag_design.md  14_recruiter_qna.md  15_founder_qna.md  16_personal_story_and_interests.md  17_resume_source_of_truth.md  18_private_data_policy.md  README.md  deployment.md  profile.md  projects.md  roadmap.md  skills.md
backend/migrations/: env.py
backend/migrations/versions/: 20260605_0001_initial_schema.py  20260605_0002_question_events.py  20260605_0003_question_event_status.py  20260611_0004_question_event_embeddings.py
backend/scripts/: start.sh
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DottedBackground.tsx  IntroCards.tsx  ResumeButton.tsx  SocialLinks.tsx  StatusFace.tsx
frontend/src/data/: profile.ts
infra/postgres/init/: 001-vector.sql
(+2 files in other folders)
